--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Language App</string>
+    <string name="sad_connection_smile">😞</string>
+    <string name="no_connection">No internet connection</string>
+    <string name="check_connection">Check again</string>
 </resources>
