--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Language App</string>
-    <string name="sad_connection_smile">😞</string>
+    <string name="app_name" translatable="false">Language App</string>
+    <string name="sad_connection_smile" translatable="false">😞</string>
     <string name="no_connection">No internet connection</string>
     <string name="check_connection">Check again</string>
     <string name="onboarding1_title">Confidence in your words</string>
@@ -16,4 +16,15 @@
     <string name="language_select_question">What is your Mother language?</string>
     <string name="language_select_button">Choose</string>
     <string name="onboarding_button_1">Next</string>
+    <string name="login_header">Login</string>
+    <string name="login_welcome">For free, join now and start learning</string>
+    <string name="login_email_title">Email Address</string>
+    <string name="login_email_hint" translatable="false">Email</string>
+    <string name="login_password_title">Password</string>
+    <string name="login_password_hint" translatable="false">●●●●●●●</string>
+    <string name="login_registration_before_span">Not you member?</string>
+    <string name="login_registration_span">Signup</string>
+    <string name="login_google_before_span">You can use</string>
+    <string name="login_google_span">Google for</string>
+    <string name="login_google_after_span">sign in</string>
 </resources>
