--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,23 @@
     <string name="login_google_before_span">You can use</string>
     <string name="login_google_span">Google for</string>
     <string name="login_google_after_span">sign in</string>
+    <string name="signup_header">Signup</string>
+    <string name="signup_welcome">Create an Account</string>
+    <string name="signup_first_title">First Name</string>
+    <string name="signup_second_title">Second Name</string>
+    <string name="signup_email_title">Email Address</string>
+    <string name="signup_before_span">Already you member?</string>
+    <string name="signup_span">Login</string>
+    <string name="signup_first_name_hint">Your first name</string>
+    <string name="signup_second_name_hint">Your second name</string>
+    <string name="signup_email_hint" translatable="false">Email</string>
+    <string name="signup_welcome_password">Choose a Password</string>
+    <string name="signup_continue">Continue</string>
+    <string name="signup_complete">Signup</string>
+    <string name="signup_password_title">Password</string>
+    <string name="signup_password_hint" translatable="false">●●●●●●●</string>
+    <string name="signup_confirm_title">Confirm Password</string>
+    <string name="signup_confirm_hint" translatable="false">●●●●●●●</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
