--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,13 @@
     <string name="signup_password_hint" translatable="false">●●●●●●●</string>
     <string name="signup_confirm_title">Confirm Password</string>
     <string name="signup_confirm_hint" translatable="false">●●●●●●●</string>
+    <string name="invalid_data_title">Invalid data</string>
+    <string name="invalid_data_message">The data you entered is invalid</string>
+    <string name="no_sign_in_title">"Can't sign in"</string>
+    <string name="no_sign_in_message">The email and/or password you entered is incorrect</string>
+    <string name="main_activity_motivation">Are you ready for learning today?</string>
+    <string name="main_leaderboard_title">Top users</string>
+    <string name="main_exercises_title">Available exercises</string>
+    <string name="busy_email_title">Error</string>
+    <string name="busy_email_message">This email is already using</string>
 </resources>
