--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -48,4 +48,10 @@
     <string name="main_exercises_title">Доступные упражнения</string>
     <string name="busy_email_title">Ошибка</string>
     <string name="busy_email_message">Этот адрес уже используется</string>
+    <string name="profile_switch_to_dark">Установить темную тему</string>
+    <string name="profile_switch_to_light">Установить светлую тему</string>
+    <string name="profile_change_language">Сменить родной язык</string>
+    <string name="profile_change_image">Сменить изображение</string>
+    <string name="profile_logout">Выйти</string>
+    <string name="profile_welcome">Ваш профиль, %s</string>
 </resources>
