--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -54,4 +54,15 @@
     <string name="profile_change_image">Сменить изображение</string>
     <string name="profile_logout">Выйти</string>
     <string name="profile_welcome">Ваш профиль, %s</string>
+    <string name="animal_exercise_title">Угадай животное</string>
+    <string name="animal_exercise_request">Напиши, кто на изображении</string>
+    <string name="animal_exercise_good">Божечки! Это правильно!</string>
+    <string name="animal_exercise_bad">Эм… Неправильный ответ :(\n Правильно: %s</string>
+    <string name="animal_exercise_next">Далее</string>
+    <string name="animal_exercise_check">Проверить</string>
+    <string name="animal_exercise_again">Попробовать снова</string>
+    <string name="animal_exercise_button_text">Угадай животное</string>
+    <string name="word_exercise_button_text">Практика слов</string>
+    <string name="audition_exercise_button_text">Аудирование</string>
+    <string name="multiplayer_exercise_button_text">Игра</string>
 </resources>
