--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -71,4 +71,7 @@
     <string name="word_exercise_title">Практика слов</string>
     <string name="word_exercise_check">Проверить</string>
     <string name="word_exercise_next">Далее</string>
+    <string name="bottom_sheet_message">Как вы хотите получить изображение?</string>
+    <string name="sheet_choose_image">Выбрать изображение</string>
+    <string name="sheet_choose_photo">Сделать фото</string>
 </resources>
