--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,7 @@
     <string name="word_exercise_title">Word practice</string>
     <string name="word_exercise_check">Check</string>
     <string name="word_exercise_next">Next</string>
+    <string name="bottom_sheet_message">Where do you want to select the photo from?</string>
+    <string name="sheet_choose_image">Choose image</string>
+    <string name="sheet_choose_photo">Take photo</string>
 </resources>
