--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -74,4 +74,5 @@
     <string name="bottom_sheet_message">Как вы хотите получить изображение?</string>
     <string name="sheet_choose_image">Выбрать изображение</string>
     <string name="sheet_choose_photo">Сделать фото</string>
+    <string name="multiplayer_player_label">Вы</string>
 </resources>
